// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card component should render Card component 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    debug={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <div
          className="card-image"
        >
          <figure
            className="image"
          >
            <img />
          </figure>
        </div>,
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <p
                className="title is-4"
              />
              <p
                className="subtitle is-6"
              />
            </div>
          </div>
        </div>,
      ],
      "className": "card",
      "to": "/detail/undefined",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <figure
            className="image"
          >
            <img />
          </figure>,
          "className": "card-image",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img />,
            "className": "image",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": undefined,
              "src": undefined,
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "figure",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="media"
          >
            <div
              className="media-content"
            >
              <p
                className="title is-4"
              />
              <p
                className="subtitle is-6"
              />
            </div>
          </div>,
          "className": "card-content",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="media-content"
            >
              <p
                className="title is-4"
              />
              <p
                className="subtitle is-6"
              />
            </div>,
            "className": "media",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="title is-4"
                />,
                <p
                  className="subtitle is-6"
                />,
              ],
              "className": "media-content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "title is-4",
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": undefined,
                  "className": "subtitle is-6",
                },
                "ref": null,
                "rendered": null,
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <div
            className="card-image"
          >
            <figure
              className="image"
            >
              <img />
            </figure>
          </div>,
          <div
            className="card-content"
          >
            <div
              className="media"
            >
              <div
                className="media-content"
              >
                <p
                  className="title is-4"
                />
                <p
                  className="subtitle is-6"
                />
              </div>
            </div>
          </div>,
        ],
        "className": "card",
        "to": "/detail/undefined",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <figure
              className="image"
            >
              <img />
            </figure>,
            "className": "card-image",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img />,
              "className": "image",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": undefined,
                "src": undefined,
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "figure",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="media"
            >
              <div
                className="media-content"
              >
                <p
                  className="title is-4"
                />
                <p
                  className="subtitle is-6"
                />
              </div>
            </div>,
            "className": "card-content",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="media-content"
              >
                <p
                  className="title is-4"
                />
                <p
                  className="subtitle is-6"
                />
              </div>,
              "className": "media",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="title is-4"
                  />,
                  <p
                    className="subtitle is-6"
                  />,
                ],
                "className": "media-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "title is-4",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": undefined,
                    "className": "subtitle is-6",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`Card component should render Card component with properly elements 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    color="Gold"
    id="01"
    image="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
    title="iPhone XS Max"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <div
          className="card-image"
        >
          <figure
            className="image"
          >
            <img
              alt="iPhone XS Max"
              src="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
            />
          </figure>
        </div>,
        <div
          className="card-content"
        >
          <div
            className="media"
          >
            <div
              className="media-content"
            >
              <p
                className="title is-4"
              >
                iPhone XS Max
              </p>
              <p
                className="subtitle is-6"
              >
                Gold
              </p>
            </div>
          </div>
        </div>,
      ],
      "className": "card",
      "to": "/detail/01",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <figure
            className="image"
          >
            <img
              alt="iPhone XS Max"
              src="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
            />
          </figure>,
          "className": "card-image",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <img
              alt="iPhone XS Max"
              src="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
            />,
            "className": "image",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "alt": "iPhone XS Max",
              "src": "https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png",
            },
            "ref": null,
            "rendered": null,
            "type": "img",
          },
          "type": "figure",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="media"
          >
            <div
              className="media-content"
            >
              <p
                className="title is-4"
              >
                iPhone XS Max
              </p>
              <p
                className="subtitle is-6"
              >
                Gold
              </p>
            </div>
          </div>,
          "className": "card-content",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="media-content"
            >
              <p
                className="title is-4"
              >
                iPhone XS Max
              </p>
              <p
                className="subtitle is-6"
              >
                Gold
              </p>
            </div>,
            "className": "media",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <p
                  className="title is-4"
                >
                  iPhone XS Max
                </p>,
                <p
                  className="subtitle is-6"
                >
                  Gold
                </p>,
              ],
              "className": "media-content",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "iPhone XS Max",
                  "className": "title is-4",
                },
                "ref": null,
                "rendered": "iPhone XS Max",
                "type": "p",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Gold",
                  "className": "subtitle is-6",
                },
                "ref": null,
                "rendered": "Gold",
                "type": "p",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <div
            className="card-image"
          >
            <figure
              className="image"
            >
              <img
                alt="iPhone XS Max"
                src="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
              />
            </figure>
          </div>,
          <div
            className="card-content"
          >
            <div
              className="media"
            >
              <div
                className="media-content"
              >
                <p
                  className="title is-4"
                >
                  iPhone XS Max
                </p>
                <p
                  className="subtitle is-6"
                >
                  Gold
                </p>
              </div>
            </div>
          </div>,
        ],
        "className": "card",
        "to": "/detail/01",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <figure
              className="image"
            >
              <img
                alt="iPhone XS Max"
                src="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
              />
            </figure>,
            "className": "card-image",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <img
                alt="iPhone XS Max"
                src="https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png"
              />,
              "className": "image",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "iPhone XS Max",
                "src": "https://s.tmocache.com//images/png/products/phones/Apple-iPhone-XS-Gold/170x250.png",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            "type": "figure",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="media"
            >
              <div
                className="media-content"
              >
                <p
                  className="title is-4"
                >
                  iPhone XS Max
                </p>
                <p
                  className="subtitle is-6"
                >
                  Gold
                </p>
              </div>
            </div>,
            "className": "card-content",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div
                className="media-content"
              >
                <p
                  className="title is-4"
                >
                  iPhone XS Max
                </p>
                <p
                  className="subtitle is-6"
                >
                  Gold
                </p>
              </div>,
              "className": "media",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <p
                    className="title is-4"
                  >
                    iPhone XS Max
                  </p>,
                  <p
                    className="subtitle is-6"
                  >
                    Gold
                  </p>,
                ],
                "className": "media-content",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "iPhone XS Max",
                    "className": "title is-4",
                  },
                  "ref": null,
                  "rendered": "iPhone XS Max",
                  "type": "p",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Gold",
                    "className": "subtitle is-6",
                  },
                  "ref": null,
                  "rendered": "Gold",
                  "type": "p",
                },
              ],
              "type": "div",
            },
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
